--- a/test.css
+++ b/test.css
@@ -1,9 +1,10 @@
-*{
+* {
   margin: 0%;
 }
 #login {
   margin: 0%;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./fitness.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./fitness.jpg");
   position: relative;
   width: 100%;
   height: 1024px;
@@ -107,8 +108,7 @@
   order: 0;
   align-self: stretch;
   flex-grow: 0;
-  color: #d22b2b
-
+  color: rgb(245, 233, 3);
 }
 
 #content2 {
@@ -184,8 +184,8 @@
   flex: none;
   order: 0;
   flex-grow: 0;
-  color: #d22b2b
 
+  color: #d22b2b;
 }
 input {
   box-sizing: border-box;
@@ -224,7 +224,7 @@ input {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #d22b2b;
+  color: #667085;
 }
 
 #active {
@@ -262,7 +262,7 @@ input {
 
   /* Black */
 
-  background: #d22b2b;
+  background: #2d2d2d;
   /* Black */
 
   border: 1px solid #2d2d2d;
@@ -304,8 +304,7 @@ input {
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
-  background: linear-gradient(to bottom, #ffff00 0%, #ffcc00 100%);
-  color: #0d5151;
+  background: #d22b2b;
 }
 
 #signup {
