--- a/myaccount.css
+++ b/myaccount.css
@@ -7,6 +7,8 @@
     width: 100%;
     height: auto;
     background: linear-gradient(to bottom, #0850a2fa 0%, hsla(0, 94%, 48%, 0.84) 100%);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(fitness.jpg);
     background-size: cover;
     background-position: center;
   }
@@ -101,4 +103,5 @@
   }
   #cont{
     text-align: center;
+    padding: 2em;
   }
