--- a/style.css
+++ b/style.css
@@ -265,3 +265,65 @@ h2 {
   color: #d22b2b;
   text-align: center;
 }
+
+.new-task-input {
+  width: 500px;
+  padding: 15px 0;
+  margin: 20px 10px;
+  height: 25px;
+  border-radius: 25px;
+  border-color: #d22b2b;
+  text-align: center;
+  background: transparent;
+  cursor:crosshair
+  position: relative;
+  overflow: hidden;
+}
+
+.text {
+  width: 500px;
+}
+
+.todo {
+  text-align: center;
+}
+
+.submit {
+  width: 200px;
+  padding: 15px 0;
+  text-align: center;
+  margin: 20px 10px;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #d22b2b;
+  background: transparent;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+/* daily Excercises */
+
+.slider {
+  margin: 50px auto;
+  width: 50%;
+}
+
+.btn1{
+  width: 100%;
+  height: 45px;
+  background:transparent;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1em;
+  color:#d22b2b;
+  font-weight: 500;
+}
+
+.slider-img{
+  height: 300px;
+  width: 750px;
+}
